# Adamantite

./: .gitignore  .gitmodules  CMakeLists.txt
Adamantite.CSharp/: Adamantite.csproj
Adamantite.CSharp.Bindings/: NativeLibs.cs
Adamantite.CSharp.Bindings/src/: Adamantite.cs  Canvas.cs  CanvasExtensions.cs  CanvasTextHelper.cs  Colors.cs  FpsCounter.cs  IConsoleGame.cs  Logging.cs  NativeConnectors.cs  Video.cs  generator.cs
Adamantite.CSharp.Bindings/src/GFX/: Canvas.cs  CanvasExtensions.cs  CanvasTextHelper.cs  FpsCounter.cs
Adamantite.CSharp.Bindings/src/GFX/GPU/: BitmapFont.cs  ColorUtil.cs  CommandBuffer.cs  Renderer.cs  SDLAdapterRenderer.cs  SimpleGPURunner.cs  Surface.cs  VirtualTerminal.cs
Adamantite.CSharp.Bindings/src/GFX/GPU/Interop/: SDLRendererNative.cs
Adamantite.CSharp.Bindings/src/GFX/UI/: AdsrGraph.cs  Button.cs  UIElement.cs  UIManager.cs
Adamantite.CSharp.Bindings/src/GPU/: BitmapFont.cs  ColorUtil.cs  CommandBuffer.cs  IRenderBackend.cs  Renderer.cs  SDLAdapterRenderer.cs  SimpleGPURunner.cs  Surface.cs  Texture.cs  VirtualTerminal.cs
Adamantite.CSharp.Bindings/src/GPU/Interop/: SDLRendererNative.cs
Adamantite.CSharp.Bindings/src/Helpers/: SoundBus.cs  SoundSystem.cs
Adamantite.CSharp.Bindings/src/Renderers/: RendererCAPI.cs  RendererStubs.cs
Adamantite.CSharp.Bindings/src/SFX/: Button.cs  SimpleSynth.cs
Adamantite.CSharp.Bindings/src/UI/: AdsrGraph.cs  Button.cs  Label.cs  UIElement.cs  UIManager.cs
Adamantite.CSharp.Bindings/src/Util/: DebugUtil.cs  DiagnosticsProvider.cs
Adamantite.CSharp.Bindings/src/VFS/: IFileSystem.cs  InMemoryFileSystem.cs  PhysicalFileSystem.cs  VFSGlobal.cs  VfsFileInfo.cs  VfsFontLoader.cs  VfsManager.cs
Adamantite.CSharp.old/GFX/: Canvas.cs  TextureLoader.cs
Adamantite.CSharp.old/GFX/GPU/: BitmapFont.cs  CommandBuffer.cs  SDLAdapterRenderer.cs  Texture.cs  VirtualTerminal.cs
Adamantite.CSharp.old/GFX/UI/: Button.cs
Adamantite.CSharp.old/Helpers/: SoundBus.cs  SoundSystem.cs
Adamantite.CSharp/GFX/: IConsoleGame.cs
Adamantite.CSharp/GFX/GPU/: BitmapFont.cs  ColorUtil.cs  IRenderBackendStubs.cs  Renderer.cs  SimpleGPURunner.cs  Surface.cs  Texture.cs  VirtualTerminal.cs
Adamantite.CSharp/GFX/GPU/Interop/: SDLRendererNative.cs
Adamantite.CSharp/Helpers/: SoundSystem.cs
Adamantite.CSharp/SFX/: SimpleSynth.cs
Adamantite.CSharp/Util/: DebugUtil.cs  DiagnosticsProvider.cs
Adamantite.CSharp/VFS/: InMemoryFileSystem.cs  VFSGlobal.cs  VfsFileInfo.cs  VfsManager.cs
Adamantite.Cpp/: CMakeLists.txt  NativeConnectors.hpp
Adamantite.Cpp/GFX/: Canvas.cpp  Canvas.hpp  CanvasExtensions.hpp  CanvasTextHelper.hpp  IConsoleGame.hpp
Adamantite.Cpp/GFX/GPU/: ColorUtil.hpp  CommandBuffer.hpp  IRenderBackend.hpp  VirtualTerminal.hpp
Adamantite.Cpp/GFX/UI/: Button.hpp  Label.hpp
Adamantite.Cpp/Helpers/: SoundBus.hpp  SoundSystem.hpp
Adamantite.Cpp/SFX/: Button.hpp  SimpleSynth.hpp
Adamantite.Cpp/Util/: DebugUtil.hpp  DiagnosticsProvider.hpp
Adamantite.Cpp/VFS/: IFileSystem.hpp  InMemoryFileSystem.hpp  PhysicalFileSystem.hpp  VFSGlobal.hpp  VfsFileInfo.hpp  VfsFontLoader.hpp  VfsManager.hpp
Adamantite.core/: CMakeLists.txt  Logging.cpp  Logging.hpp
Adamantite.core/Renderers/: RendererCAPI.h  RendererStubs.hpp  SDLRenderer.cpp
Adamantite.html/: CMakeLists.txt  generator.cpp
Adamantite.runtime/: Adamantite.cpp  CMakeLists.txt
Adamantite.sound/: Adamantite.cpp  CMakeLists.txt  Readme.md
Adamantite.video/: CMakeLists.txt  Colors.hpp  FpsCounter.hpp  Video.h
Adamantite.video/GPU/: BitmapFont.hpp  Renderer.hpp  SDLAdapterRenderer.hpp  SimpleGPURunner.hpp  Surface.hpp  Texture.hpp
Adamantite.video/GPU/Interop/: SDLRendererNative.hpp
Adamantite.video/UI/: AdsrGraph.hpp  UIElement.hpp  UIManager.hpp
bindingGenerator/: BindingGenerator.cs  CSharpBindingGenerator.cs  CppHeaderParser.cs  CppSharpBindingGenerator.cs  Program.cs  bindingGenerator.csproj
